--- a/frontend/src/styles/videoComponent.module.css
+++ b/frontend/src/styles/videoComponent.module.css
@@ -1,8 +1,41 @@
 .meetVideoContainer{
     position: relative;
+    height: 100vh;
+    background: rgb(1,4,48);
 }
 
-.meetVideoContainer > .meetUserVideo{
+.meetUserVideo{
     position: absolute;
+    bottom: 10vh;
+    height: 25vh;
+    width: auto;
+    right: 0;
+    border-radius: 20px;
+}
+
+
+.buttonContainers {
+    position: absolute;
+    width: 100vw;
     bottom: 0;
+    text-align: center;
+}
+
+
+.buttonContainers svg{
+    font-size: 3rem;
+}
+
+
+.conferenceView{
+    display: flex;
+    padding: 10px;
+    gap: 10px;
+}
+
+.conferenceView video{
+    width: 40vw;
+    height: 20vh;
+    min-width: 30vw;
+    border-radius: 10px;
 }
